--- a/.pylintrc
+++ b/.pylintrc
@@ -1,3 +1,9 @@
+[MASTER]
+
+load-plugins=pylint.extensions.docparams
+
+jobs=4
+
 [MESSAGES CONTROL]
 
 enable=pylint.extensions.docparams
@@ -8,11 +14,18 @@ disable=g-bad-import-order,import-self,duplicate-code,too-many-arguments,
         blacklisted-name,too-many-instance-attributes,no-member,
         c-extension-no-member,unsubscriptable-object,no-name-in-module,
         inconsistent-return-statements,not-context-manager,
-        wrong-import-order,no-value-for-parameter,undefined-variable
+        no-value-for-parameter,undefined-variable,missing-type-doc,
+        missing-return-type-doc,missing-yield-type-doc,too-many-function-args
 
 [FORMAT]
 
+max-line-length=79
+
 indent-string='  '
+
+max-module-lines=2000
+
+expected-line-ending-format=LF
 
 [REPORTS]
 
