Make linter checks optional on Travis. (#48)

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ install:
   - pip install -q -e .
 script:
   - python -c "import agents"
-  - python -m pylint agents
+  - python -m pylint agents || true
   - python -m unittest discover -p "*_test.py"
